Fixed image animation on small devices

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 	padding: 0;
 	font-size: 1em;
 	font-weight: normal;
+  display: block;
   box-sizing: border-box;
 }
 ol, ul {
